inventory-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
spec:
  type: NodePort
  selector:
    app: inventoryapp
  ports:
  - port: 7000
    targetPort: 7000
    nodePort: 30007
