ingress-inventory.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: inventory.lab.dj
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: inventory-service
              port:
                number: 7000
